fix: more spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -622,10 +622,11 @@ header {
         #aboutMaestro {
             display: flex;
             flex-wrap: wrap;
-            padding-bottom: 11.5rem;
+            padding-bottom: 3.688rem;
             border-bottom: 1px solid $borderColor;
             @include lg {
                 flex-wrap: nowrap;
+                padding-bottom: 11.5rem;
             }
             #aboutImage {
                 @include lg {
